# hotel_voice_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
config/grafana/provisioning/dashboards/: dashboard.yml  overview.json
config/grafana/provisioning/datasources/: datasources.yml
config/nginx/: nginx.conf  nginx.conf.template
config/nginx/conf.d/: hotel_agent.conf  hotel_agent.dev.conf.template  hotel_agent.prod.conf.template  proxy_params.conf
config/nginx/snippets/: proxy_params.conf  websocket_params.config
config/prometheus/: prometheus.yml
config/prometheus/rules/: alerts.yml
docker/: Dockerfile
hotel_agent/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
hotel_agent/api/: consumers.py  exceptions.py  permissions.py  serializers.py  throttling.py
hotel_agent/api/v1/: urls.py
hotel_agent/api/views/: main.py
hotel_agent/core/: admin.py  apps.py  middleware.py  models.py  routers.py  signals.py  tasks.py
hotel_agent/core/management/commands/: seed_demo_data.py
hotel_agent/core/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_alter_room_id_and_more.py  __init__.py
hotel_agent/kafka/: handlers.py  producer_consumer.py
hotel_agent/kafka/management/commands/: run_kafka_consumer.py
hotel_agent/monitoring/: metrics.py
hotel_agent/services/: voice_agent.py
hotel_agent/settings/: base.py  development.py  production.py  test.py
scripts/: deploy.sh  init_db.sql
tests/: conftest.py
tests/integration/: test_kafka_ws.py
tests/unit/: test_voice_agent.py
