[project]
name = "hotel_voice_agent"
version = "1.0.0"
description = "Production-ready AI Voice Agent for Hotel Services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Django & REST
    "django>=5.0.0 ,
    "djangorestframework>=3.15.0",
    "djangorestframework-simplejwt>=5.3.0",
    "django-cors-headers>=4.3.0",
    "django-filter>=24.0",
    "django-ratelimit>=4.1.0",
    "django-redis>=5.4.0",
    # Database
    "psycopg2-binary>=2.9.9",
    "django-pglock>=1.6.0",
    # OpenAI
    "openai>=1.35.0",
    "websockets>=12.0",
    # Kafka
    "confluent-kafka>=2.4.0",
    "aiokafka>=0.10.0",
    # Async / Task Queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "channels>=4.1.0",
    "channels-redis>=4.2.0",
    "daphne>=4.1.0",
    # Monitoring
    "prometheus-client>=0.20.0",
    "django-prometheus>=2.3.1",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-django>=0.46b0",
    "opentelemetry-instrumentation-psycopg2>=0.46b0",
    "opentelemetry-exporter-prometheus>=0.46b0",
    # Auth & Security
    "django-allauth>=0.63.0",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    # Utilities
    "python-decouple>=3.8",
    "boto3>=1.34.0",
    "pillow>=10.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "structlog>=24.2.0",
    "sentry-sdk[django]>=2.6.0",
    "gunicorn>=22.0.0",
    "uvicorn[standard]>=0.30.0",
    "whitenoise>=6.7.0",
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-django>=4.8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "django-stubs>=5.0.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-django>=4.8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "faker>=25.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "django-stubs>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "hotel_agent.settings.production"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "hotel_agent.settings.test"
asyncio_mode = "auto"
addopts = "--cov=hotel_agent --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["hotel_agent"]
